# amos-protocol

./: .dockerignore  .env.example  AGENT_CONTEXT.md  CLAUDE.md  Cargo.toml  README.md  amos-relay.plugin  lu14023yrzp.tmp  lu21423ysgo.tmp
.github/workflows/: ci.yml  emit-stale-merge-metric.yml  plumbline.yml
.plumbline/: MISSION.md  policy.json
.plumbline/receipts/: alpha-advisory-onchain-and-pin.json  chore-pin-plumbline-v0.3.0.json  ci-add-ci-and-plumbline.json  plumbline-v0.4.1.json  plumbline-wait-for-ci.json
amos-agent/src/: agent_loop.rs  anthropic.rs  bedrock.rs  main.rs  model_registry.rs  provider.rs  routes.rs  vertex.rs
amos-agent/src/harness_client/: mod.rs
amos-agent/src/tools/: mod.rs
amos-core/src/: config.rs  error.rs
amos-core/src/token/: economics.rs  trust.rs
amos-harness/: Cargo.toml
amos-harness/migrations/: 20260411000040_create_harness_settings.sql  20260412000044_fleet_hardening.sql  20260413000045_fix_bedrock_model_ids.sql  20260414000046_create_wallet_connections.sql  20260414000047_add_openclaw_agents_wallet.sql  20260417000051_create_oauth_states.sql  20260417000052_create_oauth_providers.sql  20260418000054_add_provider_mode_toggle_to_settings.sql  20260610000057_production_hardening_indexes.sql
amos-harness/src/: bedrock.rs  html_sanitizer.rs  lib.rs  main.rs  prompt_guard.rs  relay_sync.rs  schema.rs  server.rs  sessions.rs  shutdown.rs  state.rs
amos-harness/src/agent/: autonomous.rs
amos-harness/src/automations/: engine.rs  mod.rs
amos-harness/src/canvas/: generator.rs  types.rs
amos-harness/src/middleware/: admin.rs  mod.rs  rate_limit.rs  security_headers.rs
amos-harness/src/openclaw/: fleet.rs
amos-harness/src/routes/: agent_proxy.rs  bounties.rs  confirm.rs  data.rs  fleet.rs  harness_info.rs  llm_providers.rs  mod.rs  oauth.rs  settings.rs  templates.rs  uploads.rs  wallet.rs
amos-harness/src/task_queue/: mod.rs
amos-harness/src/templates/: mod.rs
amos-harness/src/tools/: app_tools.rs  automation_tools.rs  bounty_agent_tools.rs  canvas_tools.rs  communication_tools.rs  integration_tools.rs  mod.rs  oauth_tools.rs  openclaw_tools.rs  platform_tools.rs  revision_tools.rs  schema_tools.rs  site_tools.rs  system_tools.rs  template_tools.rs  web_tools.rs
amos-harness/static/: council.html  index.html
amos-harness/static/img/: amos-token-metadata.json
amos-harness/static/js/: app.js  wallet.js
amos-harness/templates/: generic-crm.json  mini-crm.json
amos-harness/tests/: smoke_flows.rs  tool_selection_live.rs
amos-oracle/: Cargo.toml
amos-oracle/prompts/: amos_constitutional_v1.md
amos-oracle/src/: agent.rs  bedrock.rs  decision.rs  error.rs  intake.rs  lib.rs  metrics.rs  mission.rs  precedent.rs  prompt.rs  registry.rs  review.rs
amos-oracle/tests/: live_smoke.rs
amos-relay/: .env.example
amos-relay/migrations/: 20260414000001_add_claimed_by_wallet.sql  20260414000002_fix_reputation_table_and_wallet_unique.sql  20260415000001_add_harness_id_column.sql  20260415000002_add_verification_gate.sql  20260416000002_add_onchain_tx_columns.sql  20260428000001_proof_receipt_and_policy.sql  20260428000002_failure_capsules.sql  20260428000003_gate_override.sql
amos-relay/src/: lib.rs  main.rs  middleware.rs  pointing.rs  proof_receipt.rs  settlement_retry.rs  solana.rs  state.rs
amos-relay/src/routes/: agents.rs  bounties.rs  escalations.rs
amos-solana/: Anchor.toml
amos-solana/programs/amos-bounty/: Cargo.toml
amos-solana/programs/amos-bounty/src/: constants.rs  errors.rs  lib.rs  state.rs
amos-solana/programs/amos-bounty/src/instructions/: admin.rs  claims.rs  decay.rs  dispute.rs  distribution.rs  escrow.rs  metrics.rs  mod.rs  prepare.rs  registry.rs  trust.rs
amos-solana/programs/amos-governance/: Cargo.toml
amos-solana/programs/amos-governance/src/: constants.rs  errors.rs  lib.rs  state.rs
amos-solana/programs/amos-governance/src/instructions/: gates.rs  governance.rs  mod.rs  priority.rs  proposals.rs  research.rs  rewards.rs
amos-solana/programs/amos-treasury/: Cargo.toml
amos-solana/programs/amos-treasury/src/: constants.rs  errors.rs  lib.rs  state.rs
amos-solana/programs/amos-treasury/src/instructions/: admin.rs  claims.rs  mod.rs  revenue.rs  transparency.rs
amos-solana/scripts/: e2e-bounty-test.mjs  e2e-onchain-test.mjs  initialize-bounty.mjs  initialize-treasury.mjs  mainnet-deploy.sh  migrate-mint.mjs  migrate-treasury-mint.mjs  rebalance-treasury.mjs  set-fee-recipients.mjs
docker/agent/: Dockerfile  entrypoint.sh
docker/harness/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/oracle/: Dockerfile  task-definition.json
docs/: AMOS_PROOF_CARRYING_DEV_PIPELINE.md  AMOS_THESIS_AND_STRATEGY.md  BOUNTY_TRIAGE_PLAN.md  CORPORATE_STRUCTURE_ANALYSIS.md  DEVELOPER_GUIDE.md  EXTERNAL_AGENT_PROTOCOL.md  GRAND_CHALLENGE_PROTOCOL.md  NORTH-STAR.md  ON_CHAIN_CLAIMS_ROADMAP.md  OPS_ORACLE_ONCHAIN_GUARD_001.md  README.md  SEED_BOUNTY_CATALOG.md  TEST_HARNESS_PLAN.md  THREAT_MODEL.md  token_economy_equations.md  token_economy_math.md  whitepaper_simple.md  whitepaper_technical.md
docs/core/: architecture.md  backup-and-recovery.md  business-plan.md  ecosystem-flywheel.md  thesis.md
docs/features/: network-intelligence.md  wallet-setup.md
docs/protocol/: PHASE_0_PROTOCOL_PRIMITIVES.md  experiment-outcome-model.md  experiment-proposal-model.md  network-signal-model.md  observation-model.md  receipt-schema.md  risk-approval-matrix.md  scope-classification-enum.md
infra/cloudwatch/: README.md  alarms.json  dashboard.json  metric-filters.json
scripts/: auto-merge-bot.sh  deploy-observability.sh  discovery_curve_sim.py  emit-stale-merge-metric.sh  generate_strategy_pdf.py  qa-verification-bot.sh  verify-stale-merge-wiring.sh
