[workspace]
members = [
    "amos-core",
    "amos-harness",
    "amos-relay",
    "amos-cli",
    "amos-agent",
    "amos-oracle",
    "amos-packages/amos-education",
    "amos-packages/amos-autoresearch",
    "amos-packages/amos-social",
    # Solana programs are built separately via Anchor (not part of cargo workspace)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amos-labs/amos-platform-2.0"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout", "fs"] }

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
config = "0.14"
dotenvy = "0.15"

# Crypto & Solana client SDK
solana-sdk = "2.1"
solana-client = "2.1"
anchor-client = "0.30"
bs58 = "0.5"
ed25519-dalek = "2.1"

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"

# Auth / JWT
jsonwebtoken = "9.3"
argon2 = "0.5"

# Misc
rand = "0.8"
regex = "1.11"
base64 = "0.22"
url = "2.5"
dashmap = "6.1"
parking_lot = "0.12"
bytes = "1.7"
secrecy = { version = "0.10", features = ["serde"] }

# AWS signing (for Bedrock API)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Encryption (credential vault)
aes-gcm = "0.10"

# Template engines
tera = "1.20"
minijinja = "2.6"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# Vector embeddings (pgvector)
pgvector = { version = "0.4", features = ["sqlx"] }

# Document processing (extract + export)
pdf-extract = "0.10"
docx-rs = "0.4"
genpdf = "0.2"
zip = "0.6"

# JSON Schema validation
jsonschema = "0.28"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Additional HTTP/WebSocket
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = "0.26"

# Docker API
bollard = "0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
