[package]
name = "amos-harness"
description = "AMOS Harness - AI-native business operating system deployed per-customer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amos-harness"
path = "src/main.rs"

[[bin]]
# Prints the cataloged Bedrock inference-profile IDs, one per line.
# Consumed by the CI `live-model-probe` job which then calls Converse
# against each ID. Keeps the dropdown and the probe in lockstep.
name = "print-model-catalog"
path = "src/bin/print_model_catalog.rs"

[features]
default = []
pkg-education = ["amos-education"]
pkg-autoresearch = ["amos-autoresearch"]
pkg-social = ["amos-social"]

[dependencies]
# Optional package dependencies (enabled via features)
amos-education = { path = "../amos-packages/amos-education", optional = true }
amos-autoresearch = { path = "../amos-packages/amos-autoresearch", optional = true }
amos-social = { path = "../amos-packages/amos-social", optional = true }

amos-core = { path = "../amos-core", features = ["db", "http", "packages"] }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# HTTP client (for Bedrock, OpenClaw, integrations).
# `blocking` feature needed for the one-shot ECS task-role credential fetch
# at startup — that path runs before we're inside an async context.
reqwest = { workspace = true, features = ["blocking"] }

# Template engine (canvas rendering)
tera = { workspace = true }

# Time & IDs
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# WebSocket (OpenClaw control plane)
tokio-tungstenite = { workspace = true }

# Docker management (for managed deployments)
bollard = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Misc
bytes = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

# Wallet signature verification
ed25519-dalek = { workspace = true, features = ["std"] }
bs58 = { workspace = true }

# AWS signing (for Bedrock API)
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

# Vector embeddings (pgvector)
pgvector = { workspace = true }

# Document processing (extract + export)
pdf-extract = { workspace = true }
lopdf = "0.38"
docx-rs = { workspace = true }
genpdf = { workspace = true }
zip = { workspace = true }

# HTML sanitization for user-provided canvas content (SECURE-005)
ammonia = "4.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = "1.4"
mockall = "0.13"
