[package]
name = "amos-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mission-aware decision layer for AMOS. Intake (should this become a bounty?) and review (did this work advance the mission?) paths with confidence-gated escalation, precedent retrieval, and drift monitoring."

[dependencies]
amos-core = { path = "../amos-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[[bin]]
name = "amos-oracle-agent"
path = "src/bin/oracle_agent.rs"
