[package]
name = "amos-bounty"
version = "0.1.0"
description = "AMOS Bounty Program - Trustless Token Distribution for Contributor Work"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amos_bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
